# cuspy

./: .env.example  .gitignore  PLAN.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.opencode/: package.json
backend/: .gitignore  Cargo.toml  Dockerfile  build.rs
backend/docs/: apiv1.yml
backend/migrations/: 01_setup.sql  02_storage.sql  02_user.sql  03_agent_data.sql  03_audit_log.sql  04_profile_creation_request.sql  04_user.sql  05_audit_log.sql  05_auth.sql  06_profile_creation_request.sql  06_ratings.sql  07_auth.sql  07_kills.sql  08_kill_event.sql  08_kills.sql  08_perks.sql  09_loot.sql  09_ratings.sql  10_global_events.sql  10_perks.sql  11_kill_event_state_machine.sql  11_loot.sql  12_global_events.sql  merge.sh
backend/migrations/sqlite/: 02_user.sql  03_audit_log.sql  04_profile_creation_request.sql  05_auth.sql  06_ratings.sql  07_kills.sql  08_perks.sql  09_loot.sql  10_global_events.sql  11_kill_event_state_machine.sql
backend/proto/profilerequest/: profilerequest.proto
backend/src/: config.rs  const.rs  lib.rs  main.rs  notifier.rs  telegram.rs
backend/src/api/: admin.rs  agent_data.rs  apiprofile_creation.rs  apiuser.rs  auth.rs  const.rs  docs.rs  extractor.rs  health.rs  helpers.rs  image.rs  kills.rs  mod.rs  profile-creation.rs  user.rs
backend/src/api/db/: mod.rs
backend/src/api/models/: agent_data.rs  auth.rs  kill.rs  mod.rs  profile.rs  resource.rs  similarity.rs  user.rs
backend/src/api/routes/: mod.rs
backend/src/api/routes/admin/: mod.rs  profile_request_crud.rs  users_crud.rs
backend/src/api/routes/agent_data/: create.rs  get.rs  mod.rs
backend/src/api/routes/auth/: login.rs  me.rs  mod.rs  register.rs
backend/src/api/routes/kill/: confirm.rs  helpers.rs  list.rs  mod.rs  moderate.rs  report.rs
backend/src/api/routes/profile_request/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
backend/src/api/routes/resource/: crud.rs  get.rs  mod.rs
backend/src/api/routes/stats/: mod.rs  stats.rs
backend/src/api/routes/user/: delete.rs  get.rs  mod.rs  update.rs
backend/src/db/: mod.rs
backend/src/grpc/: mod.rs
backend/src/grpc/middleware/: auth_interceptor.rs
backend/src/grpc/services/: greeter.rs  helpers.rs  mod.rs  profile_request.rs
backend/src/grpc/services/greeter/: mod.rs
backend/src/grpc/services/profile_request/: mod.rs
backend/src/models/: agent_data.rs  auth.rs  kill.rs  mod.rs  profile.rs  rating.rs  resource.rs  similarity.rs  user.rs
backend/src/rest/: docs.rs  extractor.rs  health.rs  helpers.rs  mod.rs
backend/src/rest/db/: mod.rs
backend/src/rest/models/: agent_data.rs  auth.rs  kill.rs  profile.rs  resource.rs  user.rs
backend/src/rest/routes/: mod.rs
backend/src/rest/routes/admin/: mod.rs  profile_request_crud.rs  users_crud.rs
backend/src/rest/routes/agent_data/: create.rs  get.rs  mod.rs
backend/src/rest/routes/auth/: login.rs  me.rs  mod.rs  refresh.rs  register.rs  telegram.rs
backend/src/rest/routes/kill/: confirm.rs  helpers.rs  list.rs  mod.rs  moderate.rs  report.rs
backend/src/rest/routes/profile_request/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
backend/src/rest/routes/resource/: get.rs
backend/src/rest/routes/stats/: mod.rs  stats.rs
backend/src/rest/routes/user/: delete.rs  get.rs  mod.rs  update.rs
backend/tests/: api_crud.rs  api_telegram_auth.rs  grpc_profile_request.rs
backend/tests/common/: mod.rs
cukiller/: AGENTS.md  README.md  package.json
cukiller/stitch/: DESIGN.md  agent_id.html  dossier_main.html  dossier_verification.html  enlistment.html  operational_boundaries.html  rankings.html  reveal_confirmation.html  target_intel.html
docs/: STITCH.md  openapi.json  openapi.yaml
frontend/: .prettierignore  .prettierrc  Dockerfile  README.md  buf.gen.yaml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/messages/: en.json  ru.json
frontend/src/: app.d.ts  hooks.server.ts  hooks.ts
frontend/stitch/: DESIGN.md  agent_id.html  cukiller_protocol_system_interface.html  dossier_main.html  dossier_verification.html  enlistment.html  operational_boundaries.html  rankings.html  reveal_confirmation.html  target_intel.html
frontend/tests/: admin-moderation.e2e.ts  gameplay-flow.e2e.ts  mock-backend.mjs  (+3 more)
nginx/: nginx.conf
tools/: sync_frontend_locales.py
(+108 files in other folders)
