[package]
name = "cukiller-backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
telegram-auth = ["dep:hmac", "dep:sha2", "dep:hex"]

[dependencies]
axum = { version = "0.8.9", features = ["tower-log"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
env_logger = "0.11.10"
http = "1.3.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "time", "runtime-tokio-native-tls"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "rt", "sync", "time"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }
thiserror = "2.0.17"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
hex = { version = "0.4.3", optional = true }
teloxide = { version = "0.17.0", features = ["macros"] }
url = "2.5.7"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
