[package]
name = "cukiller-backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
telegram-auth = ["dep:hmac", "dep:hex"]

[dependencies]
axum = { version = "0.8.9", features = ["macros", "multipart", "tower-log"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
env_logger = "0.11.10"
http = "1.3.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["any", "postgres", "uuid", "time", "runtime-tokio-native-tls"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "rt", "sync", "time"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }
thiserror = "2.0.17"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
time = { version = "0.3.44", features = ["parsing", "formatting", "serde"] }
hmac = { version = "0.12.1", optional = true }
sha2 = "0.10.9"
hex = { version = "0.4.3", optional = true }
teloxide = { version = "0.17.0", features = ["macros"] }
url = "2.5.7"
utoipa = { version = "5.5.0", features = ["uuid", "yaml", "chrono", "preserve_order"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
bytes = "1.11.1"
rust-s3 = { version = "0.37.2", features = ["tokio-rustls-tls", "fail-on-err"] }
anyhow = "1.0.102"
base64 = "0.22.1"
axum_tonic = "0.4.1"
tonic = "0.13.1"
prost = "0.13.5"
tonic-middleware = "0.3.0"
tonic-reflection = "0.13.1"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }

[build-dependencies]
tonic-build = "0.13.1"
